--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,5 +4,5 @@
 
 <%= link_to "Back", root_path%>
 <%= link_to 'Edit', edit_book_path(@book)%>
-<%= link_to "Delete", book_path(@book), method: :delete. data: {confirm: "Are you sure"}%>
+<%= link_to "Delete", book_path(@book), method: :delete, data: {confirm: "Are you sure"}%>
 
