--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,8 +14,12 @@
 
 <div class="row">
         
+        <%= render @book.reviews %>
+        
         <div class="col-md-4">
-                        
+                <div>
+                        <%= link_to "Add Review", new_book_review_path(@book) %>
+                </div>        
         </div>
         
 </div>
