--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,6 +1,13 @@
-<p><%= review.rating%></p>
-<p><%= review.comment %></p>
+<div>
+    
+    <p><%= review.rating%></p>
+    <p><%= review.comment %></p>
+    
+    <% if user_signed_in? && review.user_id == current_user.id %>
+    
+        <%= link_to 'Edit', edit_book_review_path(review.book, review) %>
+        <%= link_to 'Delete', book_review_path(review.book, review) , method: :delete, data: {
+        confirm: "Are you sure?"}%>
+    <%end%>
 
-<%= link_to 'Edit', edit_book_review_path(review.book, review) %>
-<%= link_to 'Delete', book_review_path(review.book, review) , method: :delete, data; {
-confirm: "Are you sure?"}%>
+</div>
