--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -32,3 +32,13 @@
                 <%= link_to "Delete", book_path(@book), method: :delete, data: {confirm: "Are you sure"}%>
         <%end%>
 </div>
+
+<script>
+        $('.review-rating').raty({
+                readOnly: true,
+                score: function(){
+                     return $(this).attr('data-score');   
+                },
+                path: '/assets/'
+        });
+</script>
